--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "core-js": "^3.4.4",
     "eslint": "^6.8.0",
