--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL = mongodb://localhost/characters
+DATABASE_URL = mongodb+srv://davidGo1995:secret123D@cluster0-kzfo9.mongodb.net/test?retryWrites=true&w=majority
+DATABASE_LOCAL = mongodb://localhost/characters
