--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
