--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "sw-precache": "^5.2.1",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
+    "vue-meta": "^2.3.3",
     "vue-offline": "^2.0.8",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
