--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "geek-score",
-  "version": "0.2.0",
-  "author": "@david_go__",
-  "description": "A PWA for board games fans. It allows you to store your games, create teams and collect statistics.",
+  "name": "geek",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -26,7 +24,6 @@
     "vue-offline": "^2.0.8",
     "vue-router": "^4.0.0-alpha.6",
     "vuetify": "^2.1.0",
-    "vuetify-loader": "^1.4.4",
     "vuex": "^4.0.0-alpha.1"
   },
   "devDependencies": {
@@ -45,7 +42,8 @@
     "sass-loader": "^8.0.0",
     "sw-precache-webpack-plugin": "^1.0.0",
     "vue-cli-plugin-vue-next": "~0.1.3",
-    "vue-cli-plugin-vuetify": "~2.0.5"
+    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
