--- a/client/package.json
+++ b/client/package.json
@@ -27,13 +27,13 @@
     "vuex": "^4.0.0-alpha.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.1",
-    "@vue/cli-plugin-eslint": "~4.4.1",
-    "@vue/cli-plugin-pwa": "~4.4.1",
-    "@vue/cli-plugin-router": "~4.4.1",
-    "@vue/cli-plugin-unit-jest": "~4.4.1",
-    "@vue/cli-plugin-vuex": "~4.4.1",
-    "@vue/cli-service": "~4.4.1",
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-pwa": "^4.1.2",
+    "@vue/cli-plugin-router": "^4.1.2",
+    "@vue/cli-plugin-unit-jest": "^4.2.3",
+    "@vue/cli-plugin-vuex": "^4.1.2",
+    "@vue/cli-service": "^4.2.3",
     "@vue/compiler-sfc": "^3.0.0-beta.1",
     "@vue/test-utils": "^2.0.0-alpha.1",
     "babel-eslint": "^10.0.3",
@@ -42,7 +42,7 @@
     "sass-loader": "^8.0.0",
     "sw-precache-webpack-plugin": "^1.0.0",
     "vue-cli-plugin-vue-next": "~0.1.3",
-    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-cli-plugin-vuetify": "^2.0.3",
     "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
