--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test": "vue-cli-service test:unit"
+    "test": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -18,13 +18,13 @@
     "flush-promises": "^1.0.2",
     "register-service-worker": "^1.6.2",
     "sw-precache": "^5.2.1",
-    "vue": "^3.0.0-beta.1",
+    "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
     "vue-meta": "^2.3.3",
     "vue-offline": "^2.0.8",
-    "vue-router": "^4.0.0-alpha.6",
+    "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
-    "vuex": "^4.0.0-alpha.1"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -34,15 +34,14 @@
     "@vue/cli-plugin-unit-jest": "^4.2.3",
     "@vue/cli-plugin-vuex": "^4.1.2",
     "@vue/cli-service": "^4.2.3",
-    "@vue/compiler-sfc": "^3.0.0-beta.1",
-    "@vue/test-utils": "^2.0.0-alpha.1",
+    "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.0.3",
-    "eslint-plugin-vue": "^7.0.0-alpha.0",
+    "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "sw-precache-webpack-plugin": "^1.0.0",
-    "vue-cli-plugin-vue-next": "~0.1.3",
     "vue-cli-plugin-vuetify": "^2.0.3",
+    "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
@@ -51,7 +50,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
+      "plugin:vue/essential",
       "eslint:recommended"
     ],
     "rules": {},
