--- a/client/package.json
+++ b/client/package.json
@@ -52,7 +52,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/recommended",
       "eslint:recommended"
     ],
     "rules": {},
