--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /client/.DS_Store
 /*/node_modules
 node_modules
+package-lock.json
 
 # local env files
 .env.local
@@ -8,8 +9,6 @@ node_modules
 
 # Log files
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Editor directories and files
 .idea
