--- a/client/package.json
+++ b/client/package.json
@@ -55,7 +55,18 @@
       "plugin:vue/recommended",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "vue/max-attributes-per-line": [
+        "error",
+        {
+          "singleline": 5,
+          "multiline": {
+            "max": 1,
+            "allowFirstLine": false
+          }
+        }
+      ]
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     },
