--- a/client/package.json
+++ b/client/package.json
@@ -39,12 +39,18 @@
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.0.3",
     "eslint-plugin-vue": "^5.0.0",
+    "husky": "^4.2.5",
     "sass": "^1.26.8",
     "sass-loader": "^8.0.0",
     "sw-precache-webpack-plugin": "^1.0.0",
     "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.5.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test"
+    }
   },
   "eslintConfig": {
     "root": true,
