--- a/client/package.json
+++ b/client/package.json
@@ -49,7 +49,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test"
+      "pre-push": "npm run test"
     }
   },
   "eslintConfig": {
