--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "release": "standard-version",
     "test": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
@@ -19,6 +20,7 @@
     "firebaseui": "^4.4.0",
     "flush-promises": "^1.0.2",
     "register-service-worker": "^1.6.2",
+    "standard-version": "^9.0.0",
     "sw-precache": "^5.2.1",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
