fix: second alert shows up

--- a/client/package.json
+++ b/client/package.json
@@ -69,7 +69,8 @@
           }
         }
       ],
-      "vue/singleline-html-element-content-newline": "off"
+      "vue/singleline-html-element-content-newline": "off",
+      "vue/multiline-html-element-content-newline": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
