Implement new .env file for vue.
In this .env file the backend dns is specified.
When running the app locally for development purpose the configuration must be like this
VUE_APP_BACKEND_HOST = localhost

If building a Image for the Frontend the variable must be specified as this
VUE_APP_BACKEND_HOST = geek-backend
Beacuse geek-backend is the service name used inside the docker network

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,6 +9,9 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 # install and cache app dependencies
 COPY ./package.json /app/package.json
+
+COPY . /app
+
 RUN npm install
 RUN npm install @vue/cli@3.7.0 -g
 
