--- a/client/.env
+++ b/client/.env
@@ -2,4 +2,4 @@
 # Possibilitys are:
 # Local development -> localhost
 # Docker-compose    -> geek-backend
-VUE_APP_BACKEND_HOST = geek-backend
+VUE_APP_BACKEND_HOST = localhost
