feat(frontend): Mount source in the container and enable live reload
Mount read only frontend source in the container and enable polling.
Polling provides live(hot) reload functionality without the need
for additional `docker-compose up` magic.
Source has to be mounted in order for the polling to work properly.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -48,3 +48,7 @@ services:
       - ${HOST_FRONTEND_PORT}:8080
     networks:
       - geek-network
+    volumes:
+      - ../client:/app/src:ro
+    environment:
+      CHOKIDAR_USEPOLLING: 1
