build(frontend): Separate node_modules from source
Source in the container is read only and reacts to changes (hot reload)
thus `node_modules` which is generated while building a container
has to be read write and accessible by the container environment.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,10 +10,13 @@ ENV PATH /app/node_modules/.bin:$PATH
 # install and cache app dependencies
 COPY ./package.json /app/package.json
 
-COPY . /app
+COPY . /app/src
 
 RUN npm install
 RUN npm install @vue/cli@3.7.0 -g
+
+# set working directory to source
+WORKDIR /app/src
 
 # start app
 CMD ["npm", "run", "serve"]
