feat(backend): Add live-reload

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -30,6 +30,8 @@ services:
     depends_on:
       - geek-database
     restart: always
+    volumes:
+      - ../:/app/src:ro
     ports:
       - ${HOST_BACKEND_PORT}:3000
     networks:
