--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-beta.22",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "core-js": "^3.4.4",
