--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
     "vue-offline": "^2.0.8",
     "vue-router": "^3.4.4",
     "vuetify": "^2.3.10",
-    "vuex": "^3.5.1"
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.6",
@@ -60,11 +60,12 @@
       "eslint:recommended"
     ],
     "rules": {
-      "vue/max-attributes-per-line": "off",
-      "vue/singleline-html-element-content-newline": "off",
-      "vue/multiline-html-element-content-newline": "off",
-      "vue/html-closing-bracket-newline": "off",
-      "vue/html-indent": "off"
+      "vue/max-attributes-per-line": 0,
+      "vue/singleline-html-element-content-newline": 0,
+      "vue/multiline-html-element-content-newline": 0,
+      "vue/html-closing-bracket-newline": 0,
+      "vue/html-indent": 0,
+      "no-unused-vars": 1
     },
     "parserOptions": {
       "parser": "babel-eslint"
