--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,15 @@
 {
   "name": "geek-score",
   "version": "0.2.0",
-  "author": "david_go__",
-  "description": "A PWA for board games fans. It allows you to store your games, create teams and collect statistics.",
   "private": true,
+  "description": "A PWA for board games fans. It allows you to store your games, create teams and collect statistics.",
+  "author": "david_go__",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
     "release": "standard-version",
-    "test": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "test": "vue-cli-service test:unit"
   },
   "dependencies": {
     "@vue/composition-api": "^1.0.0-beta.22",
@@ -32,13 +32,18 @@
     "vuex": "^3.6.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.19",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "^4.5.6",
     "@vue/cli-plugin-eslint": "^4.5.6",
     "@vue/cli-plugin-pwa": "^4.5.6",
     "@vue/cli-plugin-router": "^4.5.6",
+    "@vue/cli-plugin-typescript": "^4.5.9",
     "@vue/cli-plugin-unit-jest": "^4.5.6",
     "@vue/cli-plugin-vuex": "^4.5.6",
     "@vue/cli-service": "^4.5.6",
+    "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.0.3",
     "eslint-plugin-vue": "^5.0.0",
@@ -46,6 +51,7 @@
     "sass": "^1.26.11",
     "sass-loader": "^8.0.0",
     "sw-precache-webpack-plugin": "^1.0.0",
+    "typescript": "~3.9.3",
     "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.6.0"
@@ -57,7 +63,8 @@
     },
     "extends": [
       "plugin:vue/recommended",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@vue/typescript"
     ],
     "rules": {
       "vue/max-attributes-per-line": 0,
@@ -68,7 +75,7 @@
       "no-unused-vars": 1
     },
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@typescript-eslint/parser"
     },
     "overrides": [
       {
