--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^2.9.3",
     "core-js": "^3.4.4",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^7.1.0",
     "firebase": "^7.21.1",
     "firebaseui": "^4.6.1",
     "flush-promises": "^1.0.2",
@@ -34,7 +35,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "@vue/cli-plugin-babel": "^4.5.6",
     "@vue/cli-plugin-eslint": "^4.5.6",
     "@vue/cli-plugin-pwa": "^4.5.6",
@@ -51,7 +52,7 @@
     "sass": "^1.26.11",
     "sass-loader": "^8.0.0",
     "sw-precache-webpack-plugin": "^1.0.0",
-    "typescript": "~3.9.3",
+    "typescript": "^3.9.7",
     "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.6.0"
