--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
   "main": "index.js",
   "scripts": {
     "serve": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "editorconfig": "editorconfig-checker"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "editorconfig-checker"
+    }
   },
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "husky": "^5.1.3",
     "mongoose": "^5.10.7"
   },
   "devDependencies": {
+    "editorconfig-checker": "^3.3.0",
     "nodemon": "^2.0.4"
   }
 }
