--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,11 @@
     "release": "standard-version",
     "test": "vue-cli-service test:unit"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run test"
+    }
+  },
   "dependencies": {
     "@vue/composition-api": "^1.0.0-beta.22",
     "axios": "^0.21.1",
@@ -48,7 +53,7 @@
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.0.3",
     "eslint-plugin-vue": "^5.0.0",
-    "husky": "^4.3.0",
+    "husky": "^4.3.8",
     "sass": "^1.26.11",
     "sass-loader": "^8.0.0",
     "sw-precache-webpack-plugin": "^1.0.0",
