--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,12 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "release": "standard-version",
-    "test": "vue-cli-service test:unit"
+    "test": "vue-cli-service test:unit",
+    "editorconfig": "editorconfig-checker"
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run test "
+      "pre-push": "npm run editorconfig"
     }
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "axios": "^0.21.1",
     "chart.js": "^2.9.3",
     "core-js": "^3.4.4",
+    "editorconfig-checker": "^3.3.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^7.1.0",
     "firebase": "^7.21.1",
