--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,6 +7,8 @@ WORKDIR /app
 # add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
 
+ENV VUE_APP_BACKEND_HOST="geek-backend"
+
 # install and cache app dependencies
 COPY ./package.json /app/package.json
 
