--- a/.editorconfig
+++ b/.editorconfig
@@ -15,3 +15,12 @@ indent_size = 4
 
 [*.{diff,md}]
 trim_trailing_whitespace = false
+
+[public/**]
+end_of_line = unset
+charset = unset
+trim_trailing_whitespace = unset
+insert_final_newline = unset
+indent_style = unset
+indent_size = unset
+trim_trailing_whitespace = unset
