--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "standard-version": "^9.0.0",
     "sw-precache": "^5.2.1",
     "vue": "^2.6.12",
+    "vue-analytics": "^5.22.1",
     "vue-chartjs": "^3.5.1",
     "vue-meta": "^2.3.3",
     "vue-offline": "^2.0.8",
