--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,5 +1,5 @@
 {
-    "trailingComma": "none",
-    "semi": false,
-    "singleQuote": true
+  "trailingComma": "none",
+  "semi": true,
+  "singleQuote": true
 }
